package/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BirthdateFrom__c</fullName>
        <label>Birthdate From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BirthdateTo__c</fullName>
        <label>Birthdate To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>